# moneylog-backend

./: .dockerignore  .env.example  .gitignore  .python-version  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
app/: __init__.py  main.py
blueprint/: 00. 기획서 개요.md  01. 화면별 상세 설계.md  02. 통계·목표·AI 기능 설계.md  03. 데이터 모델 & 기술 스택.md  04. 개발 로드맵 & 부가 기능.md  05. 자산관리 설계.md  06. 고도화 설계.md
docker/: init-schemas.sql
docs/: API.md  api-reference.md  openapi.json
scripts/: create_monthly_partitions.py  create_tables.sql
tests/: conftest.py  test_ai_analysis_service.py  test_ai_chat_parsing.py  test_ai_chat_service.py  test_ai_date_parsing.py  test_ai_feedback_service.py  test_auth_account.py  test_auth_integration.py  test_auth_password.py  test_batch_api_key.py  test_bedrock_client.py  test_billing_calculation.py  test_billing_cycle.py  test_budget_service.py  test_bug_condition_exploration.py  test_category_service.py  test_create_monthly_partitions.py  test_database_singleton_properties.py  test_date_utils_properties.py  test_enum_isinstance_properties.py  test_enum_schema_properties.py  test_error_handler_properties.py  test_error_responses.py  test_export_conversion.py  test_export_service.py  test_goal_service.py  test_metadata_idempotency_properties.py  test_notification_service.py  test_oauth_router.py  test_oauth_service_properties.py  test_oauth_state.py  test_openapi_schema.py  test_pgsql_guideline_properties.py  test_preservation_properties.py  test_private_stats.py  test_private_transaction.py  (+18 more)
(+141 files in other folders)
