[project]
name = "moneylog-backend"
version = "0.1.0"
description = "MoneyLog 가계부 앱 백엔드 API 서버"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.116.1",
    "uvicorn[standard]==0.34.2",
    "sqlalchemy[asyncio]==2.0.41",
    "asyncpg==0.30.0",
    "alembic==1.15.2",
    "pydantic[email]==2.11.5",
    "pydantic-settings==2.9.1",
    "PyJWT[crypto]>=2.8.0",
    "bcrypt>=4.0.0",
    "openpyxl>=3.1.0",
    "python-multipart>=0.0.20",
    "httpx==0.28.1",
    "boto3==1.38.34",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.1",
    "pytest-asyncio==1.0.0",
    "hypothesis==6.131.15",
    "httpx==0.28.1",
    "aiosqlite==0.21.0",
]

[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
